# 38_1

./: CMakeLists.txt  main.cpp  widget.cpp  widget.h
